
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int outbuf ;
typedef int inbuf ;
typedef int fd_set ;


 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int close (int) ;
 int fgets (char*,int,int ) ;
 int fileno (int ) ;
 int fprintf (int ,char*) ;
 int fputs (char*,int ) ;
 int memset (char*,char,int) ;
 scalar_t__ read (int,char*,int) ;
 int select (int,int *,int *,int *,int *) ;
 int stderr ;
 int stdin ;
 int strlen (char*) ;
 int * strstr (char*,char*) ;
 scalar_t__ write (int,char*,int ) ;

void handleshell(int sock)
{
  char inbuf[4096], outbuf[1024];

 fd_set fdset;
 fprintf(stderr, "$ ");

 while(1) {

  FD_ZERO(&fdset);
         FD_SET(fileno(stdin), &fdset);
         FD_SET(sock, &fdset);

  select(sock + 1, &fdset, ((void*)0), ((void*)0), ((void*)0));

  if(FD_ISSET(fileno(stdin), &fdset)) {
   memset(outbuf, '\0', sizeof(outbuf));
   fgets(outbuf, sizeof(outbuf), stdin);
   if(strstr(outbuf, "exit") != ((void*)0)) {
    close(sock);
    return;
   }
   if(write(sock, outbuf, strlen(outbuf)) < 0) {
    fprintf(stderr, "! write error\n");
    return;
   }
  }

  if(FD_ISSET(sock, &fdset)) {
   memset(inbuf, '\0', sizeof(inbuf));
   if(read(sock, inbuf, sizeof(inbuf)) < 0) {
    fprintf(stderr, "! read error\n");
    return;
   }
   fputs(inbuf, stderr);
   fprintf(stderr, "$ ");
  }
 }
}
